--- a/app/src/main/res/layout/fragment_fragment_home.xml
+++ b/app/src/main/res/layout/fragment_fragment_home.xml
@@ -11,13 +11,13 @@
     <!-- TODO: Update blank fragment layout -->
 
     <ProgressBar
-        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
-        android:progressDrawable="@drawable/circle"
         android:id="@+id/pb"
+        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
         android:layout_width="267dp"
         android:layout_height="228dp"
         android:max="100"
         android:progress="0"
+        android:progressDrawable="@drawable/circle"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -27,8 +27,9 @@
 
     <TextView
         android:id="@+id/steps"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_width="128dp"
+        android:layout_height="36dp"
         android:text="0"
         android:textSize="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
